--- a/inicio/templates/inicio/prueba.html
+++ b/inicio/templates/inicio/prueba.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Este es el primer template que creé</h1>
 
-    <><p>{{mensaje}}</p>
+    <p>{{mensaje}}</p>
     {% if segundo_redondo %}
     <p style="color:yellow;">{{segundos}}</p> 
     {% elif segundo_par %}
